--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -7593,7 +7593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 111,
    "id": "29501806",
    "metadata": {},
    "outputs": [],
@@ -7615,7 +7615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 112,
    "id": "483f1e89",
    "metadata": {},
    "outputs": [
@@ -7629,7 +7629,7 @@
        "Name: Average Math Score, dtype: float64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7640,7 +7640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 113,
    "id": "0ccdd021",
    "metadata": {},
    "outputs": [
@@ -7654,7 +7654,7 @@
        "Name: Average Reading Score, dtype: float64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7665,7 +7665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 114,
    "id": "b0870742",
    "metadata": {},
    "outputs": [
@@ -7679,7 +7679,7 @@
        "Name: % Passing Math, dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7690,7 +7690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 115,
    "id": "447429a9",
    "metadata": {},
    "outputs": [
@@ -7704,7 +7704,7 @@
        "Name: % Passing Reading, dtype: float64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7715,7 +7715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 116,
    "id": "324c6870",
    "metadata": {},
    "outputs": [
@@ -7729,7 +7729,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7740,7 +7740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "c0e0c4ce",
    "metadata": {},
    "outputs": [],
@@ -7970,8 +7970,359 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "41240b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start 4.13.1 - Group By School Type\n",
+    "# -----------------------------------\n",
+    "\n",
+    "# Create new Series by calculating the following data:\n",
+    "# - Average Math Score\n",
+    "# - Average Reading Score\n",
+    "# - Average % Passing Math\n",
+    "# - Average % Passing Reading\n",
+    "# - Average % Overall Passing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "3cedf59c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "c6b2f245",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     83.473852\n",
+       "District    76.956733\n",
+       "Name: Average Math Score, dtype: float64"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_math_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "55f7d563",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     83.896421\n",
+       "District    80.966636\n",
+       "Name: Average Reading Score, dtype: float64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_reading_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "b5df946b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     93.620830\n",
+       "District    66.548453\n",
+       "Name: % Passing Math, dtype: float64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_passing_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "7d9b6581",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     96.586489\n",
+       "District    80.799062\n",
+       "Name: % Passing Reading, dtype: float64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_passing_reading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "86bdaefb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     90.432244\n",
+       "District    53.672208\n",
+       "Name: % Overall Passing, dtype: float64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_overall_passing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "b576141d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Start 4.13.2 - Create a DataFrame for the Scores by School Type\n",
+    "# ---------------------------------------------------------------\n",
+    "\n",
+    "# Create the School Type Data Frame\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "            \"Average Math Score\": type_math_scores,\n",
+    "            \"Average Reading Score\": type_reading_scores,\n",
+    "            \"% Passing Math\": type_passing_math,\n",
+    "            \"% Passing Reading\": type_passing_reading,\n",
+    "            \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "2c67861d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Format the DataFrame (and print out)\n",
+    "\n",
+    "# Formatting\n",
+    "\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59d41826",
    "metadata": {},
    "outputs": [],
    "source": []
